Bug 1927847 [wpt PR 48859] - Make the JPEG XL images get rendered larger, a=testonly
Automatic update from web-platform-tests
Make the JPEG XL images get rendered larger

It's very hard to look at differences when they're very small 3x3
spots on a large screen, so we should just make these bigger.

This also updates the fuzzy totalPixels values from 9 to 275625 (going
from 3**2 to 525**2).

--

wpt-commits: a1d1d39e2cae42be8423d314d386e3ed4d4c3402
wpt-pr: 48859

UltraBlame original commit: 332c2c9f4211daa8e01c4666575abdcbca3389f8

--- a/testing/web-platform/tests/jpegxl/3x3_jpeg_recompression.html
+++ b/testing/web-platform/tests/jpegxl/3x3_jpeg_recompression.html
@@ -27,7 +27,7 @@ content
 ;
 0
 -
-9
+275625
 "
 >
 <
@@ -99,5 +99,12 @@ resources
 3x3_jpeg_recompression
 .
 jxl
+"
+style
+=
+"
+height
+:
+525px
 "
 >
