--- a/testing/web-platform/tests/jpegxl/3x3_srgb_lossless.html
+++ b/testing/web-platform/tests/jpegxl/3x3_srgb_lossless.html
@@ -27,7 +27,7 @@ content
 ;
 0
 -
-9
+275625
 "
 >
 <
@@ -99,5 +99,12 @@ resources
 3x3_srgb_lossless
 .
 jxl
+"
+style
+=
+"
+height
+:
+525px
 "
 >
