Bug 1927802 [wpt PR 48854] - Throw exception for popovers/dialogs in non-active documents, a=testonly
Automatic update from web-platform-tests
Throw exception for popovers/dialogs in non-active documents

See discussion at:
  https://github.com/whatwg/html/issues/10659

and spec PR at:
  https://github.com/whatwg/html/pull/10705

Web-facing change PSA:
https://groups.google.com/a/chromium.org/g/blink-dev/c/jRFiIIkXv_k/m/jnPTfg8WBgAJ

Fixed: 373684393
Change-Id: I50e400ee526775f915f006865301fff2f04016b4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5943740
Reviewed-by: Domenic Denicola <domenicchromium.org>
Auto-Submit: Mason Freed <masonfchromium.org>
Commit-Queue: Domenic Denicola <domenicchromium.org>
Cr-Commit-Position: refs/heads/main{#1375681}

--

wpt-commits: 0b99ee5e8c799f9fbf7d1550ef72fec8bdb45760
wpt-pr: 48854

UltraBlame original commit: ac6cc55b745eb0d675d453266bde353b7d335402

--- a/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html
+++ b/testing/web-platform/tests/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html
@@ -1675,37 +1675,32 @@ d11
 open
 )
 ;
-d11
-.
-showModal
+assert_throws_dom
 (
-)
-;
-assert_true
-(
-d11
-.
-open
-)
-;
-this
-.
-add_cleanup
-(
+"
+INVALID_STATE_ERR
+"
 (
 )
 =
 >
 d11
 .
-close
+showModal
 (
 )
 )
 ;
+assert_false
+(
+d11
+.
+open
+)
+;
 }
 "
-Although
+When
 the
 document
 is
@@ -1718,9 +1713,7 @@ showModal
 (
 )
 should
-execute
-as
-normal
+throw
 .
 "
 )
