Bug 1928040 [wpt PR 48881] - Test `<video>` with `width` and `height` attributes but `aspect-ratio: auto`, a=testonly
Automatic update from web-platform-tests
Test <video> with width and height attributes but aspect-ratio:auto

See https://github.com/servo/servo/pull/31746#discussion_r1805234405

Signed-off-by: Oriol Brufau <obrufauigalia.com>

--

wpt-commits: 8efec77dec9ce9810fdcade80b5ee0d19636e031
wpt-pr: 48881

UltraBlame original commit: b7e77fe9603dfe870d547e5b646c38a97f8424ea

--- a/testing/web-platform/tests/html/rendering/replaced-elements/attributes-for-embedded-content-and-images/video-aspect-ratio.html
+++ b/testing/web-platform/tests/html/rendering/replaced-elements/attributes-for-embedded-content-and-images/video-aspect-ratio.html
@@ -155,8 +155,9 @@ script
 function
 assert_ratio
 (
-img
+element
 expected
+description
 )
 {
 let
@@ -168,29 +169,28 @@ epsilon
 ;
 assert_approx_equals
 (
-parseInt
+parseFloat
 (
 getComputedStyle
 (
-img
+element
 )
 .
 width
-10
 )
 /
-parseInt
+parseFloat
 (
 getComputedStyle
 (
-img
+element
 )
 .
 height
-10
 )
 expected
 epsilon
+description
 )
 ;
 }
@@ -226,7 +226,6 @@ function
 (
 )
 {
-{
 let
 video
 =
@@ -261,16 +260,21 @@ video
 2
 .
 5
-"
-contain
-:
-size
-aspect
-ratio
-"
 )
 ;
 }
+"
+Aspect
+ratio
+for
+video
+with
+contain
+:
+size
+"
+)
+;
 /
 /
 Create
@@ -330,6 +334,12 @@ media
 load
 -
 algorithm
+promise_test
+(
+async
+function
+(
+)
 {
 let
 video
@@ -401,9 +411,6 @@ video
 "
 aspect
 ratio
-for
-regular
-video
 before
 load
 "
@@ -448,15 +455,21 @@ video
 "
 aspect
 ratio
-for
-regular
-video
 after
 load
 "
 )
 ;
 }
+"
+Aspect
+ratio
+for
+regular
+video
+"
+)
+;
 /
 /
 Same
@@ -465,6 +478,12 @@ with
 auto
 width
 .
+promise_test
+(
+async
+function
+(
+)
 {
 let
 video
@@ -546,13 +565,6 @@ video
 "
 aspect
 ratio
-for
-regular
-video
-with
-width
-:
-auto
 before
 load
 "
@@ -588,6 +600,15 @@ video
 "
 aspect
 ratio
+after
+load
+"
+)
+;
+}
+"
+Aspect
+ratio
 for
 regular
 video
@@ -595,12 +616,189 @@ with
 width
 :
 auto
+"
+)
+;
+/
+/
+Same
+but
+with
+auto
+aspect
+-
+ratio
+.
+promise_test
+(
+async
+function
+(
+)
+{
+let
+video
+=
+document
+.
+createElement
+(
+"
+video
+"
+)
+;
+video
+.
+setAttribute
+(
+"
+width
+"
+"
+250
+"
+)
+;
+video
+.
+setAttribute
+(
+"
+height
+"
+"
+100
+"
+)
+;
+video
+.
+style
+.
+aspectRatio
+=
+"
+auto
+"
+;
+video
+.
+src
+=
+getVideoURI
+(
+'
+/
+media
+/
+2x2
+-
+green
+'
+)
+;
+document
+.
+body
+.
+appendChild
+(
+video
+)
+;
+/
+/
+The
+aspect
+ratio
+is
+2
+because
+the
+default
+size
+is
+300x150
+.
+assert_ratio
+(
+video
+2
+"
+aspect
+ratio
+before
+load
+"
+)
+;
+await
+new
+Promise
+(
+r
+=
+>
+video
+.
+addEventListener
+(
+"
+loadeddata
+"
+r
+{
+once
+:
+true
+}
+)
+)
+;
+/
+/
+But
+now
+we
+can
+use
+the
+natural
+ratio
+from
+the
+video
+source
+.
+assert_ratio
+(
+video
+1
+"
+aspect
+ratio
 after
 load
 "
 )
 ;
 }
+"
+Aspect
+ratio
+for
+regular
+video
+with
+aspect
+-
+ratio
+:
+auto
+"
+)
+;
 test_computed_style
 (
 "
@@ -745,9 +943,6 @@ test_computed_style
 "
 auto
 "
-)
-;
-}
 )
 ;
 <
