Bug 1928066 [wpt PR 48883] - DOM: Preserve selection during moveBefore(), a=testonly
Automatic update from web-platform-tests
DOM: Preserve selection during moveBefore()

This CL preserves visual selection computation when a child is removed
from the DOM *during* a state-preserving atomic move.

This is particularly relevant when the moved node is either the anchor
or focus node of the selection. This CL also adds a bunch of tests to
confirm that selection is properly preserved when:
 - Selection anchor is moved in the DOM to include more nodes
 - Selection focus is moved in the DOM to exclude once-intersecting
   nodes
 - Nodes that are entirely within a selection (not anchor or focus) are
   rearranged/moved still within that selection

R=nrosenthalchromium.org

Bug: 40150299
Change-Id: Ib4a4cc8531f954d9864bd62399b297b5c8aa870b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5961984
Commit-Queue: Dominic Farolino <domchromium.org>
Reviewed-by: Noam Rosenthal <nrosenthalchromium.org>
Cr-Commit-Position: refs/heads/main{#1375807}

--

wpt-commits: 22b9fd9a3fd23be0968d031a9ee907caca6cda1a
wpt-pr: 48883

UltraBlame original commit: 34f7bebb5f72711c34121f8a9d98f9c6ebfdabb7

--- a/testing/web-platform/tests/dom/nodes/moveBefore/tentative/selection-preserve.html
+++ b/testing/web-platform/tests/dom/nodes/moveBefore/tentative/selection-preserve.html
@@ -123,7 +123,7 @@ select_range
 (
 t
 anchorNode
-extentNode
+focusNode
 )
 {
 await
@@ -151,16 +151,16 @@ pointerDown
 .
 pointerMove
 (
-extentNode
+focusNode
 .
 clientWidth
-extentNode
+focusNode
 .
 clientHeight
 {
 origin
 :
-extentNode
+focusNode
 }
 )
 .
@@ -622,6 +622,524 @@ preceding
 and
 following
 text
+"
+)
+;
+const
+kHTML
+=
+<
+div
+id
+=
+grandparentDiv
+>
+<
+span
+id
+=
+grandparentParagraph
+>
+Grandparent
+paragraph
+<
+/
+span
+>
+<
+div
+id
+=
+parentDiv
+>
+<
+span
+id
+=
+parentParagraph
+>
+Parent
+paragraph
+<
+/
+span
+>
+<
+div
+id
+=
+childDiv
+>
+<
+span
+id
+=
+childParagraph1
+>
+Child
+paragraph
+one
+<
+/
+span
+>
+<
+span
+id
+=
+childParagraph2
+>
+Paragraph
+two
+<
+/
+span
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+;
+/
+/
+Selection
+spans
+parent
+-
+>
+child
+.
+promise_test
+(
+async
+t
+=
+>
+{
+document
+.
+body
+.
+innerHTML
+=
+kHTML
+;
+getSelection
+(
+)
+.
+removeAllRanges
+(
+)
+;
+await
+select_range
+(
+t
+parentParagraph
+childParagraph1
+)
+;
+grandparentDiv
+.
+moveBefore
+(
+parentDiv
+grandparentParagraph
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+anchorNode
+parentParagraph
+.
+firstChild
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+focusNode
+childParagraph1
+.
+firstChild
+)
+;
+}
+"
+moveBefore
+should
+not
+reset
+selection
+that
+enters
+a
+subtree
+when
+the
+"
++
+"
+whole
+selection
+is
+moved
+"
+)
+;
+/
+/
+Selection
+anchor
+node
+is
+moved
+upwards
+in
+the
+DOM
+to
+suddenly
+intersect
+more
+/
+/
+nodes
+.
+promise_test
+(
+async
+t
+=
+>
+{
+document
+.
+body
+.
+innerHTML
+=
+kHTML
+;
+getSelection
+(
+)
+.
+removeAllRanges
+(
+)
+;
+await
+select_range
+(
+t
+parentParagraph
+childParagraph1
+)
+;
+grandparentDiv
+.
+moveBefore
+(
+parentParagraph
+grandparentParagraph
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+anchorNode
+parentParagraph
+.
+firstChild
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+focusNode
+childParagraph1
+.
+firstChild
+)
+;
+assert_true
+(
+getSelection
+(
+)
+.
+getRangeAt
+(
+0
+)
+.
+intersectsNode
+(
+grandparentParagraph
+)
+)
+;
+}
+"
+moveBefore
+anchor
+node
+moved
+up
+to
+expand
+selection
+and
+absorb
+nodes
+"
+)
+;
+/
+/
+Intersecting
+nodes
+are
+moved
+*
+out
+*
+of
+the
+selection
+.
+promise_test
+(
+async
+t
+=
+>
+{
+document
+.
+body
+.
+innerHTML
+=
+kHTML
+;
+getSelection
+(
+)
+.
+removeAllRanges
+(
+)
+;
+await
+select_range
+(
+t
+grandparentParagraph
+childParagraph2
+)
+;
+grandparentDiv
+.
+moveBefore
+(
+childParagraph1
+grandparentParagraph
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+anchorNode
+grandparentParagraph
+.
+firstChild
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+focusNode
+childParagraph2
+.
+firstChild
+)
+;
+assert_false
+(
+getSelection
+(
+)
+.
+getRangeAt
+(
+0
+)
+.
+intersectsNode
+(
+childParagraph1
+)
+)
+;
+}
+"
+moveBefore
+move
+intersecting
+nodes
+out
+of
+a
+selection
+"
+)
+;
+/
+/
+Selection
+focus
+node
+is
+moved
+upwards
+in
+the
+DOM
+shrinking
+the
+selection
+and
+/
+/
+excluding
+once
+-
+intersecting
+nodes
+.
+promise_test
+(
+async
+t
+=
+>
+{
+document
+.
+body
+.
+innerHTML
+=
+kHTML
+;
+getSelection
+(
+)
+.
+removeAllRanges
+(
+)
+;
+await
+select_range
+(
+t
+grandparentParagraph
+childParagraph2
+)
+;
+parentDiv
+.
+moveBefore
+(
+childDiv
+parentParagraph
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+anchorNode
+grandparentParagraph
+.
+firstChild
+)
+;
+assert_equals
+(
+getSelection
+(
+)
+.
+focusNode
+childParagraph2
+.
+firstChild
+)
+;
+assert_false
+(
+getSelection
+(
+)
+.
+getRangeAt
+(
+0
+)
+.
+intersectsNode
+(
+parentParagraph
+)
+)
+;
+}
+"
+moveBefore
+focus
+node
+moved
+up
+to
+shrink
+selection
+and
+exclude
+nodes
 "
 )
 ;
