Bug 1928188 [wpt PR 48896] - Remove pointerevent WPT status updates meant for manual testing., a=testonly
Automatic update from web-platform-tests
Remove pointerevent WPT status updates meant for manual testing.

These tests use test_driver Actions which don't work in manual mode.

This is a speculative fix for related failures mentioned in the
linked bug.

Bug: 368980630
Change-Id: Ic00fcfe25f4a5c0f398941a7b5aae4cf53a71b56
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5975336
Reviewed-by: Kevin Ellis <keverschromium.org>
Commit-Queue: Mustaq Ahmed <mustaqchromium.org>
Cr-Commit-Position: refs/heads/main{#1375933}

--

wpt-commits: 5543aec78a78289148b99446716400b1cc66640c
wpt-pr: 48896

UltraBlame original commit: 8d23274fc7c6b7f2547608778eb3b2c2787015ae

--- a/testing/web-platform/tests/pointerevents/pointerevent_touch-action-inherit_parent-none_touch.html
+++ b/testing/web-platform/tests/pointerevents/pointerevent_touch-action-inherit_parent-none_touch.html
@@ -238,59 +238,6 @@ auto
 h1
 >
 <
-h4
-id
-=
-"
-desc
-"
->
-Try
-to
-scroll
-DOWN
-then
-RIGHT
-from
-inside
-blue
-rectangle
-.
-Tap
-Complete
-button
-under
-the
-rectangle
-when
-done
-.
-Expectation
-:
-no
-panning
-<
-/
-h4
->
-<
-p
->
-Note
-:
-this
-test
-is
-for
-touch
--
-devices
-only
-<
-/
-p
->
-<
 div
 class
 =
@@ -348,59 +295,6 @@ test
 "
 >
 <
-h1
->
-behavior
-:
-none
-<
-/
-h1
->
-<
-div
-id
-=
-"
-complete
--
-notice
-"
->
-<
-p
->
-The
-following
-pointer
-types
-were
-detected
-:
-<
-span
-id
-=
-"
-pointertype
--
-log
-"
->
-<
-/
-span
->
-.
-<
-/
-p
->
-<
-/
-div
->
-<
 div
 id
 =
@@ -426,6 +320,11 @@ text
 javascript
 '
 >
+"
+use
+strict
+"
+;
 window
 .
 onload
@@ -542,17 +441,6 @@ scroll
 scroll_received
 =
 true
-)
-;
-let
-detected_pointertypes
-=
-{
-}
-;
-add_completion_callback
-(
-showPointerTypes
 )
 ;
 promise_test
@@ -706,10 +594,6 @@ of
 the
 test
 "
-)
-;
-updateDescriptionComplete
-(
 )
 ;
 }
