--- a/testing/web-platform/tests/pointerevents/pointerevent_touch-action-modified_touch.html
+++ b/testing/web-platform/tests/pointerevents/pointerevent_touch-action-modified_touch.html
@@ -235,46 +235,6 @@ effect
 h1
 >
 <
-h4
-id
-=
-"
-desc
-"
->
-Try
-to
-scroll
-up
-/
-down
-starting
-at
-the
-green
-element
-.
-Expectation
-:
-the
-green
-element
-would
-vanish
-immediately
-and
-the
-content
-won
-'
-t
-scroll
-.
-<
-/
-h4
->
-<
 p
 >
 Note
@@ -369,6 +329,11 @@ body
 <
 script
 >
+"
+use
+strict
+"
+;
 let
 target
 =
@@ -427,17 +392,6 @@ pointercancel_received
 true
 )
 ;
-let
-detected_pointertypes
-=
-{
-}
-;
-add_completion_callback
-(
-showPointerTypes
-)
-;
 promise_test
 (
 async
@@ -480,25 +434,20 @@ pointercancel
 event
 is
 unexpected
-because
-there
-should
-be
-no
-scrolling
 "
-)
-;
-updateDescriptionComplete
-(
 )
 ;
 }
 "
-Deleting
+No
+scrolling
+after
+deleting
 touch
 -
 action
+:
+none
 elem
 after
 pointerdown
