Bug 1928178 [wpt PR 48893] - Fix timeout in position-absolute-replaced-minmax.html, a=testonly
Automatic update from web-platform-tests
Fix timeout in position-absolute-replaced-minmax.html

Some images don't load because we don't support SVG.
In that case this makes the test fail rather than timing out.

Signed-off-by: Oriol Brufau <obrufauigalia.com>

--

wpt-commits: 391ad9eec76213c6c236894fb7228cba7f9adb9e
wpt-pr: 48893

UltraBlame original commit: b1e14032b1a40459579fda720e5906b022ce0440

--- a/testing/web-platform/tests/css/css-position/position-absolute-replaced-minmax.html
+++ b/testing/web-platform/tests/css/css-position/position-absolute-replaced-minmax.html
@@ -214,6 +214,73 @@ margin
 style
 >
 <
+!
+-
+-
+test
+all
+combinations
+of
+minmax
+from
+section
+10
+.
+4
+table
+at
+https
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+TR
+/
+CSS2
+/
+visudet
+.
+html
+#
+min
+-
+max
+-
+widths
+-
+-
+>
+<
+!
+-
+-
+IFRAME
+tests
+-
+-
+>
+<
+!
+-
+-
+iframe
+:
+intrinsic
+size
+is
+300x150
+no
+aspect
+ratio
+-
+-
+>
+<
 div
 class
 =
@@ -272,6 +339,21 @@ iframe
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+1
+:
+w
+>
+max
+-
+width
+-
+-
 >
 <
 div
@@ -343,6 +425,21 @@ iframe
 div
 >
 <
+!
+-
+-
+spec
+2
+:
+w
+<
+min
+-
+width
+-
+-
+>
+<
 div
 class
 =
@@ -410,6 +507,21 @@ iframe
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+3
+:
+h
+>
+max
+-
+height
+-
+-
 >
 <
 div
@@ -481,6 +593,21 @@ iframe
 div
 >
 <
+!
+-
+-
+spec
+4
+:
+h
+<
+min
+-
+height
+-
+-
+>
+<
 div
 class
 =
@@ -549,6 +676,44 @@ iframe
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+5
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+where
+(
+max
+-
+width
+/
+w
+max
+-
+height
+/
+h
+)
+-
+-
 >
 <
 div
@@ -626,6 +791,45 @@ iframe
 div
 >
 <
+!
+-
+-
+spec
+6
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+where
+(
+max
+-
+width
+/
+w
+>
+max
+-
+height
+/
+h
+)
+-
+-
+>
+<
 div
 class
 =
@@ -699,6 +903,44 @@ iframe
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+7
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+where
+(
+min
+-
+width
+/
+w
+min
+-
+height
+/
+h
+)
+-
+-
 >
 <
 div
@@ -778,6 +1020,45 @@ iframe
 div
 >
 <
+!
+-
+-
+spec
+8
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+where
+(
+min
+-
+width
+/
+w
+>
+min
+-
+height
+/
+h
+)
+-
+-
+>
+<
 div
 class
 =
@@ -852,6 +1133,31 @@ iframe
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+9
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+-
+-
 >
 <
 div
@@ -929,6 +1235,31 @@ iframe
 div
 >
 <
+!
+-
+-
+spec
+10
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+-
+-
+>
+<
 div
 class
 =
@@ -1003,6 +1334,35 @@ iframe
 <
 /
 div
+>
+<
+!
+-
+-
+IMG
+png
+tests
+-
+-
+>
+<
+!
+-
+-
+image
+dimensions
+:
+200x150
+.
+images
+has
+intrinic
+size
+and
+aspect
+ratio
+-
+-
 >
 <
 div
@@ -1062,6 +1422,21 @@ x
 div
 >
 <
+!
+-
+-
+spec
+1
+:
+w
+>
+max
+-
+width
+-
+-
+>
+<
 div
 class
 =
@@ -1126,6 +1501,21 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+2
+:
+w
+<
+min
+-
+width
+-
+-
 >
 <
 div
@@ -1195,6 +1585,21 @@ x
 div
 >
 <
+!
+-
+-
+spec
+3
+:
+h
+>
+max
+-
+height
+-
+-
+>
+<
 div
 class
 =
@@ -1259,6 +1664,21 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+4
+:
+h
+<
+min
+-
+height
+-
+-
 >
 <
 div
@@ -1326,6 +1746,44 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+5
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+where
+(
+max
+-
+width
+/
+w
+max
+-
+height
+/
+h
+)
+-
+-
 >
 <
 div
@@ -1400,6 +1858,45 @@ x
 div
 >
 <
+!
+-
+-
+spec
+6
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+where
+(
+max
+-
+width
+/
+w
+>
+max
+-
+height
+/
+h
+)
+-
+-
+>
+<
 div
 class
 =
@@ -1470,6 +1967,44 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+7
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+where
+(
+min
+-
+width
+/
+w
+min
+-
+height
+/
+h
+)
+-
+-
 >
 <
 div
@@ -1545,6 +2080,45 @@ x
 div
 >
 <
+!
+-
+-
+spec
+8
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+where
+(
+min
+-
+width
+/
+w
+>
+min
+-
+height
+/
+h
+)
+-
+-
+>
+<
 div
 class
 =
@@ -1616,6 +2190,31 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+9
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+-
+-
 >
 <
 div
@@ -1690,6 +2289,31 @@ x
 div
 >
 <
+!
+-
+-
+spec
+10
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+-
+-
+>
+<
 div
 class
 =
@@ -1763,6 +2387,37 @@ x
 div
 >
 <
+!
+-
+-
+IMG
+SVG
+tests
+-
+-
+>
+<
+!
+-
+-
+image
+dimensions
+:
+200x150
+.
+images
+has
+no
+intrinic
+size
+and
+no
+aspect
+ratio
+-
+-
+>
+<
 div
 class
 =
@@ -1818,6 +2473,21 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+1
+:
+w
+>
+max
+-
+width
+-
+-
 >
 <
 div
@@ -1886,6 +2556,21 @@ x
 div
 >
 <
+!
+-
+-
+spec
+2
+:
+w
+<
+min
+-
+width
+-
+-
+>
+<
 div
 class
 =
@@ -1950,6 +2635,21 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+3
+:
+h
+>
+max
+-
+height
+-
+-
 >
 <
 div
@@ -2018,6 +2718,21 @@ x
 div
 >
 <
+!
+-
+-
+spec
+4
+:
+h
+<
+min
+-
+height
+-
+-
+>
+<
 div
 class
 =
@@ -2083,6 +2798,44 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+5
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+where
+(
+max
+-
+width
+/
+w
+max
+-
+height
+/
+h
+)
+-
+-
 >
 <
 div
@@ -2157,6 +2910,45 @@ x
 div
 >
 <
+!
+-
+-
+spec
+6
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+where
+(
+max
+-
+width
+/
+w
+>
+max
+-
+height
+/
+h
+)
+-
+-
+>
+<
 div
 class
 =
@@ -2227,6 +3019,44 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+7
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+where
+(
+min
+-
+width
+/
+w
+min
+-
+height
+/
+h
+)
+-
+-
 >
 <
 div
@@ -2302,6 +3132,45 @@ x
 div
 >
 <
+!
+-
+-
+spec
+8
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+where
+(
+min
+-
+width
+/
+w
+>
+min
+-
+height
+/
+h
+)
+-
+-
+>
+<
 div
 class
 =
@@ -2373,6 +3242,31 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+spec
+9
+:
+(
+w
+<
+min
+-
+width
+)
+and
+(
+h
+>
+max
+-
+height
+)
+-
+-
 >
 <
 div
@@ -2447,6 +3341,31 @@ x
 div
 >
 <
+!
+-
+-
+spec
+10
+:
+(
+w
+>
+max
+-
+width
+)
+and
+(
+h
+<
+min
+-
+height
+)
+-
+-
+>
+<
 div
 class
 =
@@ -2518,6 +3437,54 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+SVG
+tests
+-
+-
+>
+<
+!
+-
+-
+SVGs
+are
+special
+:
+any
+combination
+of
+intrinsic_size
+and
+aspect_ratio
+can
+happen
+.
+-
+-
+>
+<
+!
+-
+-
+Just
+viewbox
+.
+Has
+intrinsic
+aspect
+ratio
+but
+no
+width
+/
+height
+-
+-
 >
 <
 div
@@ -2646,6 +3613,27 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+Just
+viewbox
+.
+Has
+aspect_ratio
+but
+no
+intrinsic
+size
+inline_width
+defaults
+to
+container
+width
+-
+-
 >
 <
 div
@@ -2778,6 +3766,32 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+Just
+viewbox
+.
+Has
+aspect_ratio
+but
+no
+intrinsic
+size
+inline_width
+is
+constrained
+by
+left
+/
+right
+height
+computed
+proportionally
+-
+-
 >
 <
 div
@@ -2922,6 +3936,32 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+Same
+as
+previous
+test
+but
+with
+max
+-
+width
+:
+fit
+-
+content
+.
+crbug
+.
+com
+/
+1010798
+-
+-
 >
 <
 div
@@ -3075,6 +4115,26 @@ x
 div
 >
 <
+!
+-
+-
+Viewbox
++
+svg
+width
+.
+Has
+aspect_ratio
+and
+width
+.
+Height
+is
+scaled
+-
+-
+>
+<
 div
 class
 =
@@ -3212,6 +4272,26 @@ x
 div
 >
 <
+!
+-
+-
+Viewbox
++
+svg
+height
+.
+Has
+aspect_ratio
+and
+height
+.
+Width
+is
+scaled
+-
+-
+>
+<
 div
 class
 =
@@ -3349,6 +4429,26 @@ x
 div
 >
 <
+!
+-
+-
+Viewbox
++
+css
+height
+.
+Has
+aspect_ratio
+and
+height
+.
+Width
+is
+scaled
+-
+-
+>
+<
 div
 class
 =
@@ -3486,6 +4586,26 @@ x
 <
 /
 div
+>
+<
+!
+-
+-
+Viewbox
++
+css
+width
+.
+Has
+aspect_ratio
+and
+width
+.
+Height
+is
+scaled
+-
+-
 >
 <
 div
@@ -4114,6 +5234,27 @@ async_test
 getTestName
 (
 img
+)
+)
+;
+img
+.
+addEventListener
+(
+"
+error
+"
+asyncTest
+.
+unreached_func
+(
+"
+Load
+shouldn
+'
+t
+fail
+"
 )
 )
 ;
