Bug 1916682 - [devtools] Refactor cubic bezier widget layout. r=devtools-reviewers,ochameau.
Use a grid for the tooltip, driven by CSS variables that we retrieve in JS
to compute the canvas size.
Retrieve CSS variables for drawing in the canvas, and draw the diagonal
between the control points in the canvas too (instead as a background gradient).
Don't overlap the canvas and the animation easing preview as it could be
hard to discernate in High Contrast Mode.
Fix a couple issues with RTL languages.

Differential Revision: https://phabricator.services.mozilla.com/D227174

UltraBlame original commit: d000aaf8e80e72079f5b06356f9cd2896b96c7f8

--- a/devtools/client/shared/test/doc_cubic-bezier-01.html
+++ b/devtools/client/shared/test/doc_cubic-bezier-01.html
@@ -1,6 +1,45 @@
 <
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+chrome
+:
+/
+/
+devtools
+/
+content
+/
+shared
+/
+widgets
+/
+cubic
+-
+bezier
+.
+css
+"
+/
+>
+<
 div
 id
+=
+"
+cubic
+-
+bezier
+-
+container
+"
+class
 =
 "
 cubic
