--- a/devtools/client/shared/test/doc_cubic-bezier-02.html
+++ b/devtools/client/shared/test/doc_cubic-bezier-02.html
@@ -15,6 +15,30 @@ bezier
 -
 container
 "
+style
+=
+"
+-
+-
+bezier
+-
+curve
+-
+width
+:
+150px
+;
+-
+-
+bezier
+-
+curve
+-
+height
+:
+330px
+;
+"
 /
 >
 <
