Bug 1928324 - Fenix: new upload permissions tests r=ajoltan
Adds a few new high priority upload permissions tests.
Try run: https://treeherder.mozilla.org/jobs?repo=try&revision=25317af736fd1f1290f10246ac2404c6b2e96871

Differential Revision: https://phabricator.services.mozilla.com/D227463

UltraBlame original commit: c31b45e8b067635532d16efd0998c6f3b64cd9ac

--- a/mobile/android/fenix/app/src/androidTest/assets/pages/htmlControls.html
+++ b/mobile/android/fenix/app/src/androidTest/assets/pages/htmlControls.html
@@ -339,6 +339,9 @@ div
 br
 >
 <
+div
+>
+<
 form
 method
 =
@@ -394,6 +397,171 @@ div
 <
 /
 form
+>
+<
+/
+div
+>
+<
+/
+br
+>
+<
+div
+>
+<
+form
+method
+=
+"
+post
+"
+enctype
+=
+"
+multipart
+/
+form
+-
+data
+"
+>
+<
+div
+>
+<
+label
+for
+=
+"
+photosUpload
+"
+>
+Choose
+image
+or
+video
+file
+to
+upload
+:
+<
+/
+label
+>
+<
+input
+type
+=
+"
+file
+"
+id
+=
+"
+photosUpload
+"
+accept
+=
+"
+image
+/
+*
+video
+/
+*
+"
+/
+>
+<
+/
+div
+>
+<
+/
+form
+>
+<
+/
+div
+>
+<
+/
+br
+>
+<
+div
+>
+<
+form
+method
+=
+"
+post
+"
+enctype
+=
+"
+multipart
+/
+form
+-
+data
+"
+>
+<
+div
+>
+<
+label
+for
+=
+"
+audioFileUpload
+"
+>
+Choose
+audio
+file
+to
+upload
+:
+<
+/
+label
+>
+<
+input
+type
+=
+"
+file
+"
+id
+=
+"
+audioFileUpload
+"
+accept
+=
+"
+audio
+/
+*
+"
+/
+>
+<
+/
+div
+>
+<
+/
+form
+>
+<
+/
+div
 >
 <
 script
