Bug 1922020, part 9  - Remove reliance on window.opener storage access heuristic in user.js from dom/notification - r=saschanaz
I simply gave up here because I don't know what the correct behavior we should test for in a partitioned worker is.

The heuristic was making the xorigin test work because the window open would force the iframe into a non-partitioned state

Differential Revision: https://phabricator.services.mozilla.com/D224814

UltraBlame original commit: cd59a5e18609bccd9eede6bc9acce71df18a57a9

--- a/dom/notification/test/mochitest/test_notification_worker.html
+++ b/dom/notification/test/mochitest/test_notification_worker.html
@@ -239,17 +239,36 @@ runTest
 (
 )
 {
+let
+workerPath
+=
+"
+notification_worker
+.
+js
+"
+;
+if
+(
+isXOrigin
+)
+{
+workerPath
++
+=
+"
+?
+xorigin
+"
+;
+}
 var
 w
 =
 new
 Worker
 (
-"
-notification_worker
-.
-js
-"
+workerPath
 )
 ;
 w
