--- a/dom/notification/test/mochitest/test_notification_worker_child.html
+++ b/dom/notification/test/mochitest/test_notification_worker_child.html
@@ -244,12 +244,9 @@ runTest
 (
 )
 {
-var
-w
+let
+workerPath
 =
-new
-Worker
-(
 "
 notification_worker_child
 -
@@ -257,6 +254,28 @@ parent
 .
 js
 "
+;
+if
+(
+isXOrigin
+)
+{
+workerPath
++
+=
+"
+?
+xorigin
+"
+;
+}
+var
+w
+=
+new
+Worker
+(
+workerPath
 )
 ;
 w
