Bug 1922904 - Fix bug 1780701 in a different approach. r=botond
In bug 1780701, we changed ScrollSnapUtils::GetSnapPointForDestination not to
return a valid SnapDestination if the snap position is equal to the original
scroll destination. But it has a bad side-effect on wheel scrolling.

While wheel scrolling, there are multiple wheel inputs comming from OS, in every
wheel input we do use the destination of the animation running at that moment
[1].  So if in the first wheel input we created a smooth animation for snapping
to the SnapDestination, and then in the second wheel input
GetSnapPointForDestination doesn't return any valid SnapDestination so that the
smooth animation is clobbered [2].

To avoid this bad side-effect, we do skip scroll snapping in the call site,
ScrollContainerFrame::ScrollSnap, if the snap position equals to the original
scroll destination.

[1] https://searchfox.org/mozilla-central/rev/53e8dfd81c32f1ab275516406ec06a68136aaef0/gfx/layers/apz/src/AsyncPanZoomController.cpp#2585-2586
[2] https://searchfox.org/mozilla-central/rev/53e8dfd81c32f1ab275516406ec06a68136aaef0/gfx/layers/apz/src/AsyncPanZoomController.cpp#2603

Differential Revision: https://phabricator.services.mozilla.com/D227409

UltraBlame original commit: 5b6fb5d517d3b05079e470ce807390cc7db203ab

--- a/gfx/layers/apz/test/mochitest/test_group_scroll_snap.html
+++ b/gfx/layers/apz/test/mochitest/test_group_scroll_snap.html
@@ -610,6 +610,35 @@ pixel_delta_mode_multiplier
 ]
 ]
 }
+{
+"
+file
+"
+:
+"
+helper_bug1922904
+.
+html
+"
+"
+prefs
+"
+:
+[
+[
+"
+apz
+.
+test
+.
+mac
+.
+synth_wheel_input
+"
+true
+]
+]
+}
 ]
 ;
 if
