--- a/testing/web-platform/tests/fenced-frame/navigate-ancestor-nested-fenced-frame.https.html
+++ b/testing/web-platform/tests/fenced-frame/navigate-ancestor-nested-fenced-frame.https.html
@@ -59,7 +59,63 @@ script
 src
 =
 "
+/
 resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
 /
 utils
 .
@@ -77,6 +133,47 @@ src
 "
 /
 common
+/
+dispatcher
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
+/
+get
+-
+host
+-
+info
+.
+sub
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+resources
 /
 utils
 .
@@ -120,6 +217,20 @@ t
 =
 >
 {
+/
+/
+location
+.
+href
+=
+"
+resources
+/
+embeddee
+.
+html
+"
+;
 await
 runNavigateAncestorTest
 (
