--- a/testing/web-platform/tests/fenced-frame/navigate-ancestor-top-level-fenced-frame.https.html
+++ b/testing/web-platform/tests/fenced-frame/navigate-ancestor-top-level-fenced-frame.https.html
@@ -58,7 +58,63 @@ script
 src
 =
 "
+/
 resources
+/
+testdriver
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+actions
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testdriver
+-
+vendor
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
 /
 utils
 .
@@ -76,6 +132,47 @@ src
 "
 /
 common
+/
+dispatcher
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+common
+/
+get
+-
+host
+-
+info
+.
+sub
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+resources
 /
 utils
 .
