Bug 1927404 - Fix reftests. r=hsivonen
The tests don't change rendering but the references need adjusting to match the
new css.

Differential Revision: https://phabricator.services.mozilla.com/D227062

UltraBlame original commit: 1e68482cff47afed1a35a57ead6438bea2b53aeb

--- a/parser/htmlparser/tests/reftest/bug704667-1-ref.html
+++ b/parser/htmlparser/tests/reftest/bug704667-1-ref.html
@@ -65,7 +65,7 @@ highlight
 "
 >
 <
-pre
+span
 id
 >
 <
@@ -112,6 +112,10 @@ gt
 span
 >
 <
+/
+span
+>
+<
 span
 id
 >
@@ -120,6 +124,24 @@ id
 span
 >
 <
-/
-pre
+!
+-
+-
+View
+source
+CSS
+matches
+the
+<
+span
+id
+>
+elements
+and
+produces
+line
+numbers
+.
+-
+-
 >
