Bug 1922020, part 15  - Remove reliance on window.opener storage access heuristic in user.js from toolkit/components/antitracking - r=timhuang,anti-tracking-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224820

UltraBlame original commit: 11718a55e298d1bb90c37155231810747bfab417

--- a/editor/libeditor/tests/test_bug674770-1.html
+++ b/editor/libeditor/tests/test_bug674770-1.html
@@ -257,10 +257,18 @@ SimpleTest
 .
 waitForFocus
 (
+async
 function
 (
 )
 {
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
 SpecialPowers
 .
 pushPrefEnv
